[gd_scene load_steps=4 format=3 uid="uid://cvnysxk7lbru3"]

[ext_resource type="Script" path="res://Scripts/UI/Inventory_Stuff/inventory_slot.gd" id="1_qxxj0"]
[ext_resource type="Texture2D" uid="uid://bw36f1dkp2ul" path="res://Assets/InventoryBox.png" id="2_5c400"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ki2d1"]

[node name="Inventory Slot" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
offset_right = 75.0
offset_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 10
script = ExtResource("1_qxxj0")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.780392)
self_modulate = Color(1, 1, 1, 0.623529)
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
texture = ExtResource("2_5c400")

[node name="ItemQuantity" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "1"

[node name="ItemIcon" type="TextureRect" parent="TextureRect"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -31.5
offset_right = 31.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ki2d1")

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 254.0
offset_bottom = -5.0
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_font_sizes/font_size = 25
text = "NAME"

[node name="ItemType" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -11.5
offset_right = 45.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.784314)
theme_override_font_sizes/font_size = 25
text = "Type"

[node name="ItemEffect" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -23.0
offset_right = 49.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.588235)
theme_override_font_sizes/font_size = 25
text = "Effect"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -130.0
offset_right = 150.0
offset_bottom = -5.0
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 38.0
grow_horizontal = 2
text = "Use"

[node name="AssignButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -17.5
offset_right = 70.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Assign"

[node name="DropButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -40.0
offset_right = 70.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
text = "Drop"

[connection signal="gui_input" from="ItemButton" to="." method="_on_item_button_gui_input"]
[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="UsagePanel/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="UsagePanel/AssignButton" to="." method="_on_assign_button_pressed"]
[connection signal="pressed" from="UsagePanel/DropButton" to="." method="_on_drop_button_pressed"]
